cli/tests/testdata/error_005_missing_dynamic_import.ts.out
error: Uncaught (in promise) TypeError: Cannot resolve module "[WILDCARD]/bad-module.ts".
  const _badModule = await import("./bad-module.ts");
                     ^
    at async file://[WILDCARD]/error_005_missing_dynamic_import.ts:2:22
