cli/tests/testdata/error_005_missing_dynamic_import.ts
(async () => {
  const _badModule = await import("./bad-module.ts");
})();
